# trp1-document-intelligence-refinery

./: .env.example  .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  extraction_rules.yaml  main.py  pyproject.toml
.refinery/: extraction_ledger.jsonl
.refinery/pageindex/: Audit_Report_-_2023_65516674_index.json  CBE_ANNUAL_REPORT_2023-24_1a1d1948_index.json  fta_performance_survey_final_report_2022_e42e2100_index.json  tax_expenditure_ethiopia_2021_22_05fc115e_index.json
.refinery/profiles/: Audit_Report_-_2023_65516674.json  CBE_ANNUAL_REPORT_2023-24_1a1d1948.json  fta_performance_survey_final_report_2022_e42e2100.json  tax_expenditure_ethiopia_2021_22_05fc115e.json
docs/: evaluation_qa.md
reports/: final_report.md
rubric/: extraction_rules.yaml
src/: config.py  generate_evals.py  main.py
src/agents/: chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/data/: fact_store.py  vector_store.py
src/models/: __init__.py  schemas.py
src/strategies/: base.py  fast_text.py  layout_extractor.py  vision_extractor.py
src/utils/: llm.py
tests/: test_confidence.py  test_triage.py
