[project]
name = "trp1-document-intelligence-refinery"
version = "0.1.0"
description = "Document Intelligence Refinery — a production-grade, multi-stage agentic pipeline for unstructured document extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pdfplumber>=0.11.9",
    "docling>=2.76.0",
    "rich>=14.3.3",
    "langdetect>=1.0.9",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
